Cambios realizados Registro final

--- a/registro.html
+++ b/registro.html
@@ -12,10 +12,10 @@
     <p>Este es un registro para guardar la informacion de los usuarios de nuestra plataforma</p>
         <form class="form-border">
             <label for="nombre">Nombre</label><br>
-            <input type="text" name="Nombre" id="nombre">
+            <input type="text" name="Nombre" id="nombre" required>
             <br>
             <label for="correo">Correo</label><br>
-            <input type="email" name="Correo" id="correo">
+            <input type="email" name="Correo" id="correo" required>
             <br>
             <label for="Pais">Pais</label><br>
             <select name="pais" id="pais">
